--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "A minimal prompt engine for supply chain document processing",
   "main": "prompt-engine.js",
+  
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node index.js",
+    "prompt-engine": "node bin/prompt-engine.js"
   },
   "dependencies": {
-    "handlebars": "^4.7.8"
+    "express": "^5.1.0",
+    "handlebars": "^4.7.8",
+    "winston": "^3.17.0"
   },
   "keywords": [
     "prompt",
